test/error/stmt/test-assign-type/p.pas
program test_assign_type;
type i = integer;
var v: i;
begin
    i := 1;
end.
